--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,7 @@
 .navbar {
   display:flex;
   justify-content: space-around;
+  align-items: center;
   background-color: #373d20;
   color: #929487;
   width: 100%
